--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@
 }
 
 .contenuto {
-  height: 320px;
-  background-color: green;
+  margin: 10px 0;
 }
 
 .contenuto::after {
@@ -22,19 +21,23 @@
 
 .sinistra {
   height: 70%;
+  width: 25%;
   background-color: pink;
   float: left;
 }
 
 .centro {
   height: 100%;
+  width: 48%;
+  margin-right: 1%;
+  margin-left: 1%;
   background-color: violet;
   float: left;
 }
 
 .destra {
   height: 100%;
-  background-color: orange;
+  width: 25%;
   float: left;
 }
 
