--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+.container {
+  width: 1000px;
+  margin: auto;
+}
+
 .titolo {
   height: 180px;
   background-color: yellow;
@@ -20,14 +25,12 @@
 }
 
 .sinistra {
-  height: 70%;
   width: 25%;
   background-color: pink;
   float: left;
 }
 
 .centro {
-  height: 100%;
   width: 48%;
   margin-right: 1%;
   margin-left: 1%;
@@ -42,13 +45,11 @@
 }
 
 .superiore {
-  height: 42%;
   background-color: pink;
   margin-bottom: 3%;
 }
 
 .inferiore {
-  height: 42%;
   background-color: pink;
   margin-bottom: 3%;
 
