--- a/css/style.css
+++ b/css/style.css
@@ -15,23 +15,20 @@
 }
 
 .contenuto {
+  height: 500px;
   margin: 10px 0;
-}
-
-.contenuto::after {
-  content: "";
-  display: block;
-  clear: both;
 }
 
 .sinistra {
   width: 25%;
+  height: 70%;
   background-color: pink;
   float: left;
 }
 
 .centro {
   width: 48%;
+  height: 100%;
   margin-right: 1%;
   margin-left: 1%;
   background-color: violet;
@@ -45,14 +42,17 @@
 }
 
 .superiore {
+  width: 100%;
+  height: 40%;
   background-color: pink;
   margin-bottom: 3%;
 }
 
 .inferiore {
+  width: 100%;
+  height: 40%;
   background-color: pink;
   margin-bottom: 3%;
-
 }
 
 .base {
