--- a/css/style.css
+++ b/css/style.css
@@ -15,26 +15,23 @@
 }
 
 .contenuto {
-  height: 500px;
   margin: 10px 0;
 }
 
-/* .contenuto::after {
+.contenuto::after {
   content: "";
   display: block;
   clear: both;
-} */
+}
 
 .sinistra {
   width: 25%;
-  height: 70%;
   background-color: pink;
   float: left;
 }
 
 .centro {
   width: 48%;
-  height: 100%;
   margin-right: 1%;
   margin-left: 1%;
   background-color: violet;
@@ -42,21 +39,20 @@
 }
 
 .destra {
-  height: 100%;
   width: 25%;
   float: left;
 }
 
 .superiore {
   width: 100%;
-  height: 40%;
+  height: 30px;
   background-color: pink;
   margin-bottom: 3%;
 }
 
 .inferiore {
   width: 100%;
-  height: 40%;
+  height: 30px;
   background-color: pink;
   margin-bottom: 3%;
 }
